# volume-renderer

./: .gitignore  CLAUDE.md  CMakeLists.txt  Compiler_Error_Analysis.md  Doxyfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md  task_summary.txt
src/: CMakeLists.txt  Main.cpp
src/buffers/: FrameBuffer.cpp  FrameBuffer.h  FrameBufferId.h  MakeFrameBuffers.cpp  MakeFrameBuffers.h  VertexBuffer.cpp  VertexBuffer.h
src/camera/: Camera.cpp  Camera.h  CameraParameters.h  MakeDefaultCameraParameters.cpp  MakeDefaultCameraParameters.h
src/config/: Config.h  TransferFunctionConstants.h
src/context/: GlfwWindow.cpp  GlfwWindow.h  GlfwWindowDeleter.cpp  GlfwWindowDeleter.h  GlfwWindowTypes.h  InitGl.cpp  InitGl.h  InitGlad.cpp  InitGlad.h  InitGlfw.cpp  InitGlfw.h
src/data/: ApplicationState.h  ApplicationStateIniFileKey.h  ApplicationStateIniFileSavingError.h  ApplicationStateIniFileSection.h  GetApplicationStateIniFileKey.cpp  GetApplicationStateIniFileKey.h  GetGuiParametersKey.cpp  GetGuiParametersKey.h  GetVolumeMetadataKey.cpp  GetVolumeMetadataKey.h  GuiParametersKey.h  GuiParametersLoadingError.h  GuiParametersSavingError.h  IniFileSection.h  KeyValuePair.h  LoadApplicationStateFromIniFile.cpp  LoadApplicationStateFromIniFile.h  LoadGuiParametersFromIni.cpp  LoadGuiParametersFromIni.h  LoadSaveStateFromIni.cpp  LoadSaveStateFromIni.h  LoadVolumeRaw.cpp  LoadVolumeRaw.h  MakeDefaultApplicationState.cpp  MakeDefaultApplicationState.h  MakeDefaultSaveState.cpp  MakeDefaultSaveState.h  ParseCameraParameter.cpp  ParseCameraParameter.h  ParseElementIndex.cpp  ParseElementIndex.h  ParseGuiParameter.cpp  ParseGuiParameter.h  ParseKeyValuePair.cpp  ParseKeyValuePair.h  ParseSectionHeader.cpp  ParseSectionHeader.h  ParseTransferFunctionControlPoint.cpp  ParseTransferFunctionControlPoint.h  ParseTransferFunctionPoint.h  (+20 more)
src/gui/: Gui.cpp  Gui.h  GuiParameters.h  GuiUpdateFlags.h  MakeCheckbox.cpp  MakeCheckbox.h  MakeDefaultGuiParameters.cpp  MakeDefaultGuiParameters.h  MakeDefaultTransferFunction.cpp  MakeDefaultTransferFunction.h  MakeGui.cpp  MakeGui.h  MakeGuiParameters.cpp  MakeGuiParameters.h  MakeSlider.cpp  MakeSlider.h  StyleGui.cpp  StyleGui.h  TransferFunction.cpp  TransferFunction.h  TransferFunctionGui.cpp  TransferFunctionGui.h
src/imgui/: imgui.cpp  imgui.h
src/input/: DisplayProperties.h  InputHandler.cpp  InputHandler.h  MakeDisplayProperties.cpp  MakeDisplayProperties.h  MakeInputHandler.cpp  MakeInputHandler.h  TransferFunction.h  TransferFunctionControlPoint.h
src/lights/: DirectionalLight.h  GetLightSpaceMatrix.cpp  GetLightSpaceMatrix.h  MakeDefaultDirectionalLight.cpp  MakeDefaultDirectionalLight.h  MakeDefaultPointLights.cpp  MakeDefaultPointLights.h  PointLight.h
src/persistence/: ApplicationState.h  ApplicationStateIniFileKey.h  ApplicationStateIniFileLoadingError.h  ApplicationStateIniFileSavingError.h  ApplicationStateIniFileSection.h  ApplicationStateIniFileSectionNames.h  GetApplicationStateIniFileKey.cpp  GetApplicationStateIniFileKey.h  GetApplicationStateIniFileSection.cpp  GetApplicationStateIniFileSection.h  KeyValuePair.h  LoadApplicationStateFromIniFile.cpp  LoadApplicationStateFromIniFile.h  MakeDefaultApplicationState.cpp  MakeDefaultApplicationState.h  ParseCameraParameter.cpp  ParseCameraParameter.h  ParseElementIndex.cpp  ParseElementIndex.h  ParseGuiParameter.cpp  ParseGuiParameter.h  ParseKeyValuePair.cpp  ParseKeyValuePair.h  ParseSectionHeader.cpp  ParseSectionHeader.h  ParseTransferFunctionControlPoint.cpp  ParseTransferFunctionControlPoint.h  ParseTransferFunctionPoint.h  ParseValue.cpp  ParseValue.h  SaveApplicationStateToIniFile.cpp  SaveApplicationStateToIniFile.h
src/primitives/: ScreenQuad.cpp  ScreenQuad.h  ScreenQuadVertexCoordinates.cpp  ScreenQuadVertexCoordinates.h  UnitCube.cpp  UnitCube.h  UnitCubeVertexCoordinates.cpp  UnitCubeVertexCoordinates.h
src/renderpass/: MakeRenderPasses.cpp  MakeRenderPasses.h  RenderPass.cpp  RenderPass.h  RenderPassId.h  RenderPassTypes.h
src/shader/: GetShaderBaseFileName.cpp  GetShaderBaseFileName.h  GetShaderFileExtension.cpp  GetShaderFileExtension.h  GetShaderFileName.cpp  GetShaderFileName.h  GetShaderSource.cpp  GetShaderSource.h  LoadShader.cpp  LoadShader.h  MakeShaders.cpp  MakeShaders.h  MakeSsaoUpdater.cpp  MakeSsaoUpdater.h  MakeTransferFunctionTextureUpdater.cpp  MakeTransferFunctionTextureUpdater.h  Shader.cpp  Shader.h  ShaderId.h  ShaderLoadingError.h  ShaderStorage.cpp  ShaderStorage.h  ShaderType.h  SsaoUpdater.cpp  SsaoUpdater.h  TransferFunctionTextureUpdater.cpp  TransferFunctionTextureUpdater.h  UpdateCameraMatricesInShader.cpp  UpdateCameraMatricesInShader.h  UpdateLightSourceModelMatrixInShader.cpp  UpdateLightSourceModelMatrixInShader.h  UpdateLightingParametersInShader.cpp  UpdateLightingParametersInShader.h  UpdateMatricesInShader.cpp  UpdateMatricesInShader.h  UpdateSsaoFinalShader.cpp  UpdateSsaoFinalShader.h  UpdateSsaoShader.cpp  UpdateSsaoShader.h  UpdateSsaoShaders.cpp  (+1 more)
src/shaders/: DebugQuad.frag  DebugQuadDepth.frag  LightSource.frag  ShadowMap.vert  Ssao.frag  SsaoFinal.frag  SsaoFinal.vert  SsaoInput.frag  SsaoInput.vert  Volume.frag  Volume.vert
src/ssao/: MakeSsaoUpdater.cpp  MakeSsaoUpdater.h  SsaoKernel.cpp  SsaoKernel.h  SsaoUpdater.cpp  SsaoUpdater.h  SsaoUtils.cpp  SsaoUtils.h
src/storage/: ElementStorage.cpp  ElementStorage.h  FrameBufferStorage.cpp  FrameBufferStorage.h  MakeStorage.cpp  MakeStorage.h  RenderPassStorage.cpp  RenderPassStorage.h  ShaderStorage.cpp  ShaderStorage.h  Storage.cpp  Storage.h  StorageTypes.h  TextureStorage.cpp  TextureStorage.h
src/textures/: MakeTextures.cpp  MakeTextures.h  MakeVolumeDataTexture.cpp  MakeVolumeDataTexture.h  Texture.cpp  Texture.h  TextureId.h  TextureType.h  TextureUnitMapping.cpp  TextureUnitMapping.h  UpdateSsaoNoiseTexture.cpp  UpdateSsaoNoiseTexture.h  UpdateTransferFunctionTexture.cpp  UpdateTransferFunctionTexture.h
src/transferfunction/: InterpolateTransferFunction.cpp  InterpolateTransferFunction.h  MakeDefaultTransferFunction.cpp  (+9 more)
test/: CMakeLists.txt  readme.md
(+1077 files in other folders)
